2007-06-27  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailListView.m ([UIxMailListView -sleep]):
	removed method.
	([-setQualifier:_msg], [-qualifier]): removed methods.
	([UIxMailListView -defaultAction]): added code to handle the
	search criteria and value passed as url parameters. Also, we now
	handle the same search criterias as Thunderbird/Icedove.

2007-06-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/PreferencesUI/UIxJSONPreferences.m ([UIxJSONPreferences
	-jsonDefaultsAction]): bug fix: returns a WOResponse instance with
	the string instead of the string itself.
	([UIxJSONPreferences -jsonSettingsAction]): same as above.

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser +initialize]): new module
	bool var "acceptAnyUser" that is set when the AuthenticationMethod
	user default is nil.
	([SOGoUser -initWithLogin:newLoginroles:newRoles]):
	unconditionnally returns an instance whenever acceptAnyUser is set.

2007-06-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* Main/sogod.m (main): prevent SOGo from running as root.

2007-06-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoUser.m ([SOGoUser
	-setCurrentPassword:newPassword]): new stub method.
	([SOGoUser -dateFormatterInContext:context]): new method that
	returns an instance of SOGoDateFormatter configured based on the
	user defaults.

	* UI/Common/UIxPageFrame.m ([UIxPageFrame
	-relativePreferencesPath]): new method.

	* UI/Scheduler/UIxComponentEditor.m ([-titleDateFormatter]):
	removed useless method.

	* SoObjects/SOGo/SOGoDateFormatter.m: rewrote class to accept
	different configurable formats (long and short date + time).

	* SoObjects/SOGo/SOGoDateFormatter.[hm]: moved from UI/SOGoUI/.

	* SoObjects/Mailer/SOGoMailAccounts.m ([SOGoMailAccounts
	-isInternetRequest]): removed method.

	* SoObjects/SOGo/AgenorUserDefaults.m ([AgenorUserDefaults
	-jsonRepresentation]): new method with an explicit name.

	* UI/PreferencesUI/product.plist: new bundle that provides a web